@@ -19,7 +19,10 @@ v0.9 [2016-]
             - added "wxEVT_COMMAND_TEXT_UPDATED" Events for Tab 1 + Tab 2 + Tab 
             - added param page to "disable_save_buttons()" + "save_changes()" + "undo_changes()"
             - replaced all "wx.wxMessageDialog()" whith "dialog.msg()" / "dialog.info()" / "dialog.question()"
-            - replaced all custom checks and validations by our new "validate.cert()" / "validate.hub()" / "validate.cfg()" / "validate.rules()" / "validate.empty_name()" / "validate.empty_cat()" / "validate.unique_name()"
+            - replaced all custom checks and validations with "validate.cert()" / "validate.hub()" / "validate.cfg()" / "validate.rules()" / "validate.empty_name()" / "validate.empty_cat()" / "validate.unique_name()"
+            - replaced all custom table methods with "table.hasValue()" / "table.hasKey()" / "table.getKey()" / "table.copy()"
+            - added "()" to get nr and value of listbox selection
+            - fixed known issue on rules_listbox + categories_listbox with selection id and array id
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
